samples/_failures_safe/1761044889_186f7a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_396bd0ad.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_396bd0ad.c:149:9: error: expected declaration or statement at end of input
  149 |         token.type = TOKEN_UNKNOWN;
      |         ^~~~~
./samples/SAFE/__tmp_396bd0ad.c:149:9: error: expected declaration or statement at end of input
